--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+#self
+.ipynb_checkpoints
+*.ipynb
+credentianals
+dev_log
+data_company
+sublime_project
+*.pyc
+*/__pycache__
+.env
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
