--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ gunicorn = "*"
 psycopg2 = "*"
 pytz = "*"
 whitenoise = "*"
-requests==2.9.1
+requests = "2.9.1"
 
 [requires]
 python_version = "3.6"
