--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ gunicorn = "*"
 psycopg2 = "*"
 pytz = "*"
 whitenoise = "*"
-requests = "2.22.0"
+requests = "*"
 
 [requires]
 python_version = "3.6"
